@@ -42,7 +42,7 @@ my $prereqs  = {
     'Module::Metadata' => '0',
     'Path::Tiny' => '0.013',
     'Sys::Hostname' => '0',
-    'Test::Deep' => '0.108',
+    'Test::Deep' => '0.117',
     'Test::Requires' => '0.06',
     'Text::Diff' => '1.37',
     'version' => '0.88'
