@@ -32,6 +32,7 @@ t/50json.t
 t/bad_format.json
 t/boilerplate.pm
 t/default.json
+t/exceptions.dd
 t/lib/TestTypo.pm
 t/mydir/dir1/dira/dirx/file1
 t/mydir/dir1/file1
