@@ -30,7 +30,7 @@ on 'test' => sub {
   requires "Module::Metadata" => "0";
   requires "Path::Tiny" => "0.013";
   requires "Sys::Hostname" => "0";
-  requires "Test::Deep" => "0.108";
+  requires "Test::Deep" => "0.117";
   requires "Test::Requires" => "0.06";
   requires "Text::Diff" => "1.37";
   requires "version" => "0.88";
