@@ -34,7 +34,7 @@ Capture::Tiny     = 0.30
 File::pushd       = 1.00
 Module::Build     = 0.4004
 Path::Tiny        = 0.013
-Test::Deep        = 0.108
+Test::Deep        = 0.117
 Test::Requires    = 0.06
 Text::Diff        = 1.37
 
